--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@
 }
 
 .purple{
-    color: rgba(93, 88, 239, 1)
+    color: rgba(93, 88, 239, 1);
 }
 
 .black{
@@ -134,6 +134,11 @@
     width: 195px;
     height: 50px;
     cursor: pointer;
+}
+
+.nav-btn:hover{
+    background-color: rgba(1, 172, 253, 1);
+    transition: 1s;
 }
 
 .nav-btn> a{
